Acrescentado o valor das vendas

--- a/vendas.html
+++ b/vendas.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Pagina home</h1>
+    <h1>Página de vendas</h1>
+    <p>Vendas = R$5000 </p>
+    <a href="vendas.html">Ir para a pagina de vendas</a>
     <a href="index.html">Ir para a pagina de inicial</a>
 </body>
 </html>
