atualização das paginas index e contato

--- a/contato.html
+++ b/contato.html
@@ -7,12 +7,12 @@
     <title>Contato</title>
 </head>
 <body>
-    <form action="">Contato</form>
-    <input type="text area" name="nome" id="" placeholder="Digite seu nome"><br>
-    <input type="email" name="email" id="" placeholder="Digite seu email">
-    <p> mensagem</p>
-    <textarea name="" id="" cols="30" rows="10" style="text-align:center ;">Mensagem</textarea>
-    <button type="submit"></button>
-    <input type="button" value="blog">
+    <h1>gg</h1>
+    <h1>gg</h1>
+    <h1>ggg</h1>
+    <h1gg></h1>
+    <h1></h1>
+    <h1></h1>
+
 </body>
 </html>
